--- a/tos.html
+++ b/tos.html
@@ -68,6 +68,8 @@ Het proces van overgaan van de eigendom van geleverde artikelen start pas, indie
 
 <p>Indien de Klant om genoemde reden en op voorgeschreven wijze van retournering gebruik gemaakt, komen de kosten van terugzending voor rekening van Sneak. </p>
 
+
+<p class="label-margin">Verdere vragen? <a href="mailto:info@sneak.nl">Mail ons!</a></p>
 Team Sneak.NL 
 </section>
 <br>
