--- a/sneaker/home.html
+++ b/sneaker/home.html
@@ -4,8 +4,9 @@
 	<!-- Zodat we de smaak kunnen selecteren! -->
 	<title>Sneak.NL</title>
 	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="home">
 	<nav>
@@ -27,7 +28,7 @@
 
 <p>Dus sit back and relax, meld je aan en wij doen de rest!</p>
 
-<section style="height: 50px;">
+<section class="outer-section">
 	<div class="outer-box" style="background: none;">
 	
 	<svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pbXLt hcQIMr" style="fill: rgb(232, 229, 226);"><path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"></path></svg>
@@ -35,7 +36,7 @@
 </div>
 </div>
 </section>
-	<section style="height: 375px;">
+	<section class="middle-section how-to">
 	<div class="outer-box">
 
 	<div class="inner-box">
@@ -66,7 +67,7 @@
 	</div>
 </div>
 </section>
-<section style="height: 90px;">
+<section class="outer-section">
 	<div class="outer-box" style="background: none;">
 
 <svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pkURi dlWQsK" style="justify-self: center;
@@ -77,14 +78,14 @@
 </section>
 
 
-<section class="center margin-bottom">
+<section class="center margin-bottom margin-top">
 <h2 class="home-heading">Een plan voor iedereen!</h2>
 <p class="label-big ">Elk seizoen andere  pakketen!</p>
 <img src="images/shoes.jpg">
 <p class="label-big"><a href="kies_pakket.html">Bekijk de pakketen</a></p>
 </section>
 
-<section class="margin-top" style="height: 50px;">
+<section class="margin-top outer-section" >
 	<div class="outer-box-2" style="background: none;">
 	
 	<svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pbXLt hcQIMr" style="fill: rgb(232, 229, 226);"><path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"></path></svg>
@@ -92,7 +93,7 @@
 </div>
 </div>
 </section>
-	<section style="height: 375px;">
+	<section class="middle-section try">
 	<div class="outer-box-2">
 
 	<div class="inner-box-2">
@@ -112,7 +113,7 @@
 	</section>
 	</section>
 	<section class="margin-top">
-		<p class="label  ">Vul hier uw contactgegeven in om een proefpakket aan te vragen!</p>
+		<p class="label  ">Vul hier uw contactgegevens in om een proefpakket aan te vragen!</p>
 		<form>
 			<input type="text" name="" placeholder="Email" class="input-flex">
 			<input type="text" name="" placeholder="Naam" class="input-flex">
@@ -123,7 +124,7 @@
 </div>
 </section>
 
-<section style="height: 90px; margin-top: 60px;">
+<section class="outer-section">
 	<div class="outer-box-2" style="background: none;">
 
 <svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pkURi dlWQsK" style="justify-self: center;
@@ -133,7 +134,7 @@
 </div>
 </section>
 
-<section class="why-us">
+<section class="why-us margin-top margin-bottom">
 <h2 class="home-heading">Waarom ons?</h2>
 <section class="how-to-grid">
 	<section><img src="images/contact.png" class="how-to-icon"></section>
@@ -162,7 +163,7 @@
 </section>
 </section>
 <!-- FOOTER-->
-<section style="height: 35px;">
+<section class="outer-section footer">
 	<div class="outer-box" style="background: none; height: 50px;">
 	
 	<svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pbXLt hcQIMr" style="fill: rgb(232, 229, 226);"><path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"></path></svg>
@@ -171,7 +172,7 @@
 </div>
 </section>
 	<section >
-	<div class="outer-box" style="height: 50px">
+	<div class="outer-box footer " >
 
 	<div class="inner-box" style="height: 50px;">
 <footer>
