--- a/sneaker/home.html
+++ b/sneaker/home.html
@@ -4,7 +4,7 @@
 		<!-- ipv voornaam achternaam en datum, toevoegen van grid van 12 plaatjes met favoriete merken. -->
 		<!-- Zodat we de smaak kunnen selecteren! -->
 		<title>Sneak.NL</title>
-		<link rel="stylesheet" type="text/css" href="css/home_2.css">
+		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link rel="stylesheet" type="text/css" href="css/footer.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 	<div class="wrapper">
 			<nav>
 				<ul class="nav-wrapper">
-					<li class="nav-logo"><img src="logo_large.png"></li>
+					<li class="nav-logo"><img alt="" src="logo_large.png"></li>
 				</ul>
 				<ul>
 					<li class="nav-item">Login</li>
@@ -41,7 +41,7 @@
 		<div class="how-to">
 			<div class="how-to-full">
 				<div >
-					<svg class="sc-ptfmh sc-pbXLt hcQIMr" fill="rgb(232, 229, 226)" sizes="" viewBox="0 0 1338 48" xmlns="http://www.w3.org/2000/svg">
+					<svg class="sc-ptfmh sc-pbXLt hcQIMr" fill="rgb(232, 229, 226)"  viewBox="0 0 1338 48" xmlns="http://www.w3.org/2000/svg">
 					<path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"/>
 					</svg>
 				</div>
@@ -53,7 +53,7 @@
 							<div class="how-to-grid">
 								<!-- First Item -->
 								<div class="icon-box">
-									<img src="images/contact.png" class="icon">
+									<img alt="" src="images/contact.png" class="icon">
 								</div>
 								<div>
 									<label>Kies je voorkeuren</label>
@@ -61,7 +61,7 @@
 								</div>
 								<!-- Second Item -->
 								<div class="icon-box">
-									<img src="images/plan.png" class="icon">
+									<img alt="" src="images/plan.png" class="icon">
 								</div>
 								<div>
 									<label>Selecteer je plan</label>
@@ -69,7 +69,7 @@
 								</div>
 								<!-- Third Item --> 
 								<div class="icon-box">
-									<img src="images/shoe.png" class="icon">
+									<img alt="" src="images/shoe.png" class="icon">
 								</div>
 								<div>
 									<label>Krijg je schoenen</label>
@@ -77,7 +77,7 @@
 								</div>
 								<!-- Third Item --> 
 								<div class="icon-box">
-									<img src="images/party.png" class="icon">
+									<img alt="" src="images/party.png" class="icon">
 								</div>
 								<!-- Fourth Item-->
 								<div>
@@ -103,7 +103,7 @@
 				<h2 class="small-heading ">Een plan voor iedereen!</h2>
 			</div>
 			<div>
-				<img src="images/shoes.jpg">
+				<img alt="" src="images/shoes.jpg">
 			</div>
 			<div>
 				<h2 class="small-heading packages"><a class="" href="kies_pakket.html">Bekijk de paketten!</a></h2>
@@ -114,7 +114,7 @@
 		<div class="how-to">
 			<div class="how-to-full">
 				<div >
-					<svg class="sc-ptfmh sc-pbXLt hcQIMr" fill="rgb(232, 229, 226)" sizes="" viewBox="0 0 1338 48" xmlns="http://www.w3.org/2000/svg">
+					<svg class="sc-ptfmh sc-pbXLt hcQIMr" fill="rgb(232, 229, 226)"  viewBox="0 0 1338 48" xmlns="http://www.w3.org/2000/svg">
 					<path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"/>
 					</svg>
 				</div>
@@ -126,7 +126,7 @@
 							<div class="how-to-grid">
 								<!-- First Item -->
 								<div class="icon-box">
-									<img src="images/shoe.png" class="icon">
+									<img alt="" src="images/shoe.png" class="icon">
 								</div>
 								<div>
 									<label>Vraag een proefabonoment aan</label>
@@ -134,7 +134,7 @@
 								</div>
 								<!-- Second Item -->
 								<div class="icon-box">
-									<img src="images/party.png" class="icon">
+									<img alt="" src="images/party.png" class="icon">
 								</div>
 								<div>
 									<label>Begin je avontuur!</label>
@@ -173,7 +173,7 @@
 			<div class="how-to-grid">
 								<!-- First Item -->
 								<div class="icon-box">
-									<img src="images/phone.png" class="icon">
+									<img alt="" src="images/phone.png" class="icon">
 								</div>
 								<div>
 									<label>Bel ons!</label>
@@ -181,7 +181,7 @@
 								</div>
 								<!-- Second Item -->
 								<div class="icon-box">
-									<img src="images/mail.png" class="icon">
+									<img alt="" src="images/mail.png" class="icon">
 								</div>
 								<div>
 									<label>Mail ons!</label>
@@ -190,4 +190,5 @@
 		</div>
 
 	</div>
+</div>
 </body>
