Validated & added nav.

--- a/sneaker/home.html
+++ b/sneaker/home.html
@@ -15,12 +15,12 @@
 	<div class="wrapper">
 			<nav>
 				<ul class="nav-wrapper">
-					<li class="nav-logo"><img alt="" src="logo_large.png"></li>
+					<li class="nav-logo"><a href="home.html"><img alt="" src="logo_large.png"></a></li>
 				</ul>
 				<ul>
-					<li class="nav-item">Login</li>
-					<li class="nav-item">Register</li>
-					<li class="nav-item">Other</li>
+					<li class="nav-item"><a href="login.html">Login</a></li>
+					<li class="nav-item"><a href="registreer.html">Register</a></li>
+					<li class="nav-item"><a>Other</a></li>
 				</ul>
 			</nav>
 
