--- a/sneaker/kies_pakket.html
+++ b/sneaker/kies_pakket.html
@@ -14,13 +14,16 @@
 </head>
 <body>
 	<nav>
-		<ul class="nav-wrapper">
-			<li class="nav-logo"><a  href="kies_pakket.html"><img src="logo_large.png"></a></li>
-		<li class="nav-item"></li>
-		<li class="nav-item"></li>
-		<li class="nav-item"></li>
-	</ul>
-	</nav>
+				<ul class="nav-wrapper">
+					<li class="nav-logo"><a href="home.html"><img alt="" src="logo_large.png"></a></li>
+				</ul>
+				<ul>
+					<li class="nav-item"><a href="login.html">Login</a></li>
+					<li class="nav-item"><a href="registreer.html">Register</a></li>
+					<li class="nav-item"><a>Other</a></li>
+				</ul>
+			</nav>
+
 <section>
 	<h2>Kies een pakket!</h2>
 	<p>We zullen deze informatie gebruiken om de doos te customizen. Deze info kun je altijd blijven updaten.</p>
@@ -29,18 +32,18 @@
 <section>
 	<p class="label label-margin">Selecteer de schoen die jou het meest aanspreekt!</p>
 <section class="style-container">
-	<img class="style-image" id="shoe1" src="https://static.sneakerjagers.com/products/660x660/108087.jpg">
-	<img class="style-image" id="shoe2" src="https://static.sneakerjagers.com/products/660x660/113041.jpg">
-	<img class="style-image" id="shoe3" src="https://static.sneakerjagers.com/products/660x660/85465.jpg">
-	<img class="style-image" id="shoe4" src="https://static.sneakerjagers.com/products/660x660/127062.jpg">
-	<img class="style-image" id="shoe5" src="https://static.sneakerjagers.com/products/660x660/92633.jpg">
-	<img class="style-image" id="shoe6" src="https://static.sneakerjagers.com/products/660x660/122551.jpg">
-	<img class="style-image" id="shoe7" src="https://static.sneakerjagers.com/products/660x660/90248.jpg">
-	<img class="style-image" id="shoe8" src="https://static.sneakerjagers.com/products/660x660/62749.jpg">
-	<img class="style-image" id="shoe9" src="https://static.sneakerjagers.com/products/660x660/84522.jpg">
-	<img class="style-image" id="shoe10" src="https://static.sneakerjagers.com/products/660x660/16457.jpg">
-	<img class="style-image" id="shoe11" src="https://static.sneakerjagers.com/products/660x660/125832.jpg">
-	<img class="style-image" id="shoe12" src="https://static.sneakerjagers.com/products/660x660/134327.jpg">
+	<img alt="" class="style-image" id="shoe1" src="https://static.sneakerjagers.com/products/660x660/108087.jpg">
+	<img alt="" class="style-image" id="shoe2" src="https://static.sneakerjagers.com/products/660x660/113041.jpg">
+	<img alt="" class="style-image" id="shoe3" src="https://static.sneakerjagers.com/products/660x660/85465.jpg">
+	<img alt="" class="style-image" id="shoe4" src="https://static.sneakerjagers.com/products/660x660/127062.jpg">
+	<img alt="" class="style-image" id="shoe5" src="https://static.sneakerjagers.com/products/660x660/92633.jpg">
+	<img alt="" class="style-image" id="shoe6" src="https://static.sneakerjagers.com/products/660x660/122551.jpg">
+	<img alt="" class="style-image" id="shoe7" src="https://static.sneakerjagers.com/products/660x660/90248.jpg">
+	<img alt="" class="style-image" id="shoe8" src="https://static.sneakerjagers.com/products/660x660/62749.jpg">
+	<img alt="" class="style-image" id="shoe9" src="https://static.sneakerjagers.com/products/660x660/84522.jpg">
+	<img alt="" class="style-image" id="shoe10" src="https://static.sneakerjagers.com/products/660x660/16457.jpg">
+	<img alt="" class="style-image" id="shoe11" src="https://static.sneakerjagers.com/products/660x660/125832.jpg">
+	<img alt="" class="style-image" id="shoe12" src="https://static.sneakerjagers.com/products/660x660/134327.jpg">
 </section>
 </section>
 <section>
@@ -106,18 +109,19 @@
 		</select>
 	</section>
 </section>
+
 <p class="label label-margin">HOEVAAK HEB JIJ SCHOENEN NODIG?</p>
 
 <section class="membership-container">
 		<section class="membership-selector" id="membership-selector1">
-			<span class="membership-price ">	&#8364;20/mo</span><h3 class="membership-title">3 Paar per jaar</h3>
-			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 120<span> dagen.</p></section>
+			<span class="membership-price ">&#8364;20/mo</span><h3 class="membership-title">3 Paar per jaar</h3>
+			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 120</span> dagen.</p></section>
 		<section class="membership-selector" id="membership-selector2">
 			<span class="membership-price">	&#8364;25/mo</span><h3 class="membership-title">4 Paar per jaar</h3>
-			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 90<span> dagen.</p></section>
+			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 90</span> dagen.</p></section>
 	<section class="membership-selector" id="membership-selector3">
 			<span class="membership-price">	&#8364;30/mo</span><h3 class="membership-title">6 Paar per jaar</h3>
-			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 60<span> dagen.</p></section>
+			<p class="membership-par">Krijg nieuwe schoenen <span class="underline">elke 60</span> dagen.</p></section>
 </section>
 <form action="checkout.html">
 <section>
@@ -126,29 +130,7 @@
 	<button class="cart-cancel">ANNULEER</button>
 </section>
 </form>
-<!-- FOOTER-->
-<section style="height: 50px;">
-	<div class="outer-box" style="background: none; height: 50px;">
-	
-	<svg viewBox="0 0 1338 48" sizes="" class="sc-ptfmh sc-pbXLt hcQIMr" style="fill: rgb(232, 229, 226);"><path d="M1337.86 47.13c-1.01-.25-1.98-.61-2.8-1.27-3.07-2.3-3.07-6.91-4.61-9.98-1.92-3.84-4.61-6.91-8.45-8.45-1.15-.38-2.3-.77-4.22-1.54-6.14-.77-12.29-1.54-18.43-1.54-13.06-.38-26.5.38-39.55.38-23.43.38-47.24.77-70.66.38-34.18-.38-68.35 2.3-102.91 1.54-5.76 0-11.52-.38-17.28-.38-4.23 0-9.99 1.54-12.67-2.69-3.84-6.14-3.46-15.36-10.76-19.2-3.84-1.92-7.68-1.54-11.9-1.92-24.19-1.92-48.77-1.54-72.96-1.15-34.94.38-69.89 1.54-104.83 3.07-44.16 2.3-88.32 5.76-132.48 8.45-43.01 2.69-86.02 2.69-128.64 7.3-3.46.38-11.52-.77-13.06 3.46-2.69 6.91-21.89 4.99-28.03 4.99-13.06.38-25.73.38-38.78.38-26.11.38-52.61.38-78.72.38H325.14c-85.63-.38-170.88-.38-256.13-1.54-3.84 0-8.06-.38-12.29 0-4.22.38-8.83 0-13.44.38-2.69.38-6.14 0-7.68 2.69-2.69 4.61-3.46 10.37-7.3 13.82-3.46 3.07-8.83 3.07-13.06 3.46-1.01.2-2.34.2-3.6.31h1326.2v-1.33h.02z"></path></svg>
-	<div class="inner-box" >
-</div>
-</div>
-</section>
-	<section >
-	<div class="outer-box" style="height: 50px">
 
-	<div class="inner-box" style="height: 50px;">
-<footer>
-	<ul style="display: inline-flex;">
-		<a href="about.html"><li>Over ons</li></a> <li>|</li>
-		<a href="tos.html"><li> Algemene voorwaarden</li></a><li>|</li>
-		<li> Copyright</li>
-	</ul>
-</footer>
-</div>
-</div>
-</section>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
