--- a/sneaker/login.html
+++ b/sneaker/login.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
         
 <div class="header-img">
-  <a href="kies_pakket.html"><img src="logo_large.png"></a>
+  <a href="home.html"><img alt="" src="logo_large.png"></a>
 </div>
 
 
@@ -19,11 +19,11 @@
     <h1>Log in</h1>
 
     <div class="container">
-        <label class="display" for="uname"><b>Email</b></label>
+        <label class="display" ><b>Email</b></label>
         <br>
         <input type="text" class="naam-ww" placeholder="&#xF003;   Email adres" style="font-family:Arial, FontAwesome" name="uname" required>
         <br>
-        <label class="display" for="psw"><b>Wachtwoord</b></label>
+        <label class="display" ><b>Wachtwoord</b></label>
         <br>
         <input type="password" class="naam-ww" placeholder="&#xF0AD;   wachtwoord" style="font-family:Arial, FontAwesome" name="psw" required>
     </div>
