--- a/sneaker/kies_pakket.html
+++ b/sneaker/kies_pakket.html
@@ -13,14 +13,14 @@
 	</style>
 </head>
 <body>
-	<nav>
+			<nav>
 				<ul class="nav-wrapper">
 					<li class="nav-logo"><a href="home.html"><img alt="" src="logo_large.png"></a></li>
 				</ul>
 				<ul>
 					<li class="nav-item"><a href="login.html">Login</a></li>
 					<li class="nav-item"><a href="registreer.html">Register</a></li>
-					<li class="nav-item"><a>Other</a></li>
+					<li class="nav-item"><a href="account.html">Account</a></li>
 				</ul>
 			</nav>
 
