--- a/sneaker/thanks.html
+++ b/sneaker/thanks.html
@@ -37,16 +37,16 @@
 </script>
 </head>
 <body>
-			<nav>
-				<ul class="nav-wrapper">
-					<li class="nav-logo"><a href="home.html"><img alt="" src="logo_large.png"></a></li>
-				</ul>
-				<ul>
-					<li class="nav-item"><a href="login.html">Login</a></li>
-					<li class="nav-item"><a href="registreer.html">Register</a></li>
-					<li class="nav-item"><a>Other</a></li>
-				</ul>
-			</nav>
+  <nav>
+        <ul class="nav-wrapper">
+          <li class="nav-logo"><a href="home.html"><img alt="" src="logo_large.png"></a></li>
+        </ul>
+        <ul>
+          <li class="nav-item"><a href="login.html">Login</a></li>
+          <li class="nav-item"><a href="registreer.html">Register</a></li>
+          <li class="nav-item"><a href="account.html">Account</a></li>
+        </ul>
+      </nav>
 <section>
 	<p><script type="text/javascript">
   document.write(getImageTag());
