--- a/sneaker/tos.html
+++ b/sneaker/tos.html
@@ -16,7 +16,7 @@
 				<ul>
 					<li class="nav-item"><a href="login.html">Login</a></li>
 					<li class="nav-item"><a href="registreer.html">Register</a></li>
-					<li class="nav-item"><a>Other</a></li>
+					<li class="nav-item"><a href="account.html">Account</a></li>
 				</ul>
 			</nav>
 <section class="about_section">
