--- a/Sneak.NL/about.html
+++ b/Sneak.NL/about.html
@@ -43,8 +43,8 @@ Team Sneak.NL
 				<div class="how-to-full-inner ">
 		<footer>
 			<ul>
-				<li><a href="tos.html">Algemene voorwaarden</a></li><li class="footer-first-border"> | </li>
-				<li><a href="about.html">About</a></li><li> | </li>
+				<li><a href="about.html">About</a></li><li class="footer-first-border"> | </li>
+				<li><a href="tos.html">Algemene voorwaarden</a></li><li> | </li>
 				<li><a href="home.html">Home</a></li>
 			</ul>
 		</footer>
