--- a/Sneak.NL/home.html
+++ b/Sneak.NL/home.html
@@ -106,7 +106,7 @@
 				<img alt="" src="images/shoes.jpg">
 			</div>
 			<div>
-				<h2 class="small-heading packages"><a class="" href="kies_pakket.html">Bekijk de paketten!</a></h2>
+				<h2 class="small-heading packages"><a class="" href="kies_pakket.html">Bekijk de pakketten!</a></h2>
 			</div>
 
 		</div>
@@ -202,8 +202,8 @@
 				<div class="how-to-full-inner ">
 		<footer>
 			<ul>
-				<li><a href="tos.html">Algemene voorwaarden</a></li><li class="footer-first-border"> | </li>
-				<li><a href="about.html">About</a></li><li> | </li>
+				<li><a href="about.html">About</a></li><li class="footer-first-border"> | </li>
+				<li><a href="tos.html">Algemene voorwaarden</a></li><li> | </li>
 				<li><a href="home.html">Home</a></li>
 			</ul>
 		</footer>
