--- a/Sneak.NL/checkout.html
+++ b/Sneak.NL/checkout.html
@@ -142,8 +142,8 @@
 				<div class="how-to-full-inner ">
 		<footer>
 			<ul>
-				<li><a href="tos.html">Algemene voorwaarden</a></li><li class="footer-first-border"> | </li>
-				<li><a href="about.html">About</a></li><li> | </li>
+				<li><a href="about.html">About</a></li><li class="footer-first-border"> | </li>
+				<li><a href="tos.html">Algemene voorwaarden</a></li><li> | </li>
 				<li><a href="home.html">Home</a></li>
 			</ul>
 		</footer>
