Fixed map structure.

--- a/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/about.html
+++ b/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<!-- ipv voornaam achternaam en datum, toevoegen van grid van 12 plaatjes met favoriete merken. -->
 	<!-- Zodat we de smaak kunnen selecteren! -->
@@ -51,7 +51,6 @@ Team Sneak.NL
 		</div>
 	</div>
 
-<script type="text/javascript"></script>
 
 </body>
 
