--- a/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/checkout.html
+++ b/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/checkout.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<!-- ipv voornaam achternaam en datum, toevoegen van grid van 12 plaatjes met favoriete merken. -->
 	<!-- Zodat we de smaak kunnen selecteren! -->
 	<title>Sneak.NL</title>
 	<link rel="stylesheet" type="text/css" href="css/checkout.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<style type="text/css">
+	<style >
 				.active{
 		border-color: rgb(86, 95, 169) !important;
 		border: 1px solid rgb(86, 95, 169);
@@ -151,7 +151,7 @@
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript">
+<script >
 
 	 $(document).ready(function() {  
     $("section[id^='payment']").on('click', function() {
@@ -170,7 +170,6 @@
  });
 </script>
 
-<script type="text/javascript"></script>
 
 </body>
 
