--- a/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/tos.html
+++ b/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/tos.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<!-- ipv voornaam achternaam en datum, toevoegen van grid van 12 plaatjes met favoriete merken. -->
 	<!-- Zodat we de smaak kunnen selecteren! -->
 	<title>Sneak.NL</title>
 	<link rel="stylesheet" type="text/css" href="css/checkout.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+	<meta charset="utf-8">
 </head>
 <body>
 			<nav>
