--- a/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/thanks.html
+++ b/D1-K1-W2/1. Prototype Online URL + alle bestanden online prototype in map/Sneak.NL/thanks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 	<!-- ipv voornaam achternaam en datum, toevoegen van grid van 12 plaatjes met favoriete merken. -->
 	<!-- Zodat we de smaak kunnen selecteren! -->
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/checkout.css">
 	<link rel="stylesheet" type="text/css" href="css/thanks.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script type="text/javascript">
+	<script >
   var imageURLs = [
        "https://media.giphy.com/media/BlVnrxJgTGsUw/giphy.gif"
      , "https://media.giphy.com/media/9Y6n9TR7U07ew/giphy.gif"
@@ -48,7 +48,7 @@
         </ul>
       </nav>
 <section>
-	<p><script type="text/javascript">
+	<p><script >
   document.write(getImageTag());
 </script></p>
 	<h2>Bedankt voor je bestelling!</h2>
@@ -74,7 +74,7 @@
     </div>
   </div>
 
-<script type="text/javascript"></script>
+<script ></script>
 
 </body>
 
